package com.gmms;

public class Sentence {

}
