package com.gmms;

public class SentenceStructures {

}